@@ -49,8 +49,7 @@ import java.util.HashSet;
 import java.util.Set;
 
 @Environment(EnvType.CLIENT)
-public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupported
-{
+public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupported {
     public UIScrollView scrollView;
     public UIElement editor;
     public UITriggerBlockEntityList triggerBlocks;
@@ -65,34 +64,30 @@ public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupp
 
     private Set<TriggerBlockEntity> toSave = new HashSet<>();
 
-    public UITriggerBlockPanel(UIMappetDashboard dashboard)
-    {
+    public UITriggerBlockPanel(UIMappetDashboard dashboard) {
         super(dashboard);
 
-        this.triggerBlocks = new UITriggerBlockEntityList((l) -> this.fill(l.get(0), false));
-        this.triggerBlocks.context((menu) ->
-        {
-            if (this.triggerBlock != null) menu.action(UIKeys.MODEL_BLOCKS_KEYS_TELEPORT, this::teleport);
+        this.triggerBlocks = new UITriggerBlockEntityList((l) -> this.fill(l.getFirst(), false));
+        this.triggerBlocks.context((menu) -> {
+            if (this.triggerBlock != null) {
+                menu.action(UIKeys.MODEL_BLOCKS_KEYS_TELEPORT, this::teleport);
+            }
         });
         this.triggerBlocks.background();
         this.triggerBlocks.h(144);
 
-        this.leftClick = new UIButton(IKey.raw("Редактировать ЛКМ"), (button) ->
-        {
+        this.leftClick = new UIButton(IKey.raw("Редактировать ЛКМ"), (button) -> {
             Dispatcher.sendToServer(new TriggersRequestC2SPacket(RequestTrigger.TRIGGER_BLOCK_LMB, this.triggerBlock.getPos().toShortString()));
             UIOverlay.addOverlay(this.getContext(), new UIEditorTriggersOverlayPanel(RequestTrigger.TRIGGER_BLOCK_LMB), 0.55f, 0.75f).noBackground();
         });
 
-        this.rightClick = new UIButton(IKey.raw("Редактировать ПКМ"), (button) ->
-        {
+        this.rightClick = new UIButton(IKey.raw("Редактировать ПКМ"), (button) -> {
             Dispatcher.sendToServer(new TriggersRequestC2SPacket(RequestTrigger.TRIGGER_BLOCK_RMB, this.triggerBlock.getPos().toShortString()));
             UIOverlay.addOverlay(this.getContext(), new UIEditorTriggersOverlayPanel(RequestTrigger.TRIGGER_BLOCK_RMB), 0.55f, 0.75f).noBackground();
         });
 
         this.transform = new UIMappetTransform();
-
         this.transform.onScale(() -> save(triggerBlock));
-
         this.transform.onScale2(() -> save(triggerBlock));
 
         this.editor = UI.column(this.leftClick, this.rightClick, this.transform);
@@ -106,126 +101,130 @@ public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupp
         this.add(this.scrollView);
     }
 
-    private void teleport()
-    {
-        if (this.triggerBlock != null)
-        {
+    private void teleport() {
+        if (this.triggerBlock != null) {
             BlockPos pos = this.triggerBlock.getPos();
+
             PlayerUtils.teleport((double) pos.getX() + 0.5D, (double) pos.getY() + 0.5D, (double) pos.getZ() + 0.5D);
             UIUtils.playClick();
         }
     }
 
     @Override
-    public boolean supportsRollFOVControl() { return false; }
+    public boolean supportsRollFOVControl() {
+        return false;
+    }
 
     @Override
-    public void appear()
-    {
+    public void appear() {
         super.appear();
         this.dashboard.orbitKeysUI.setEnabled(() -> true);
     }
 
     @Override
-    public void disappear()
-    {
+    public void disappear() {
         super.disappear();
         this.dashboard.orbitKeysUI.setEnabled(null);
     }
 
-    public TriggerBlockEntity getTriggerBlock() { return this.triggerBlock; }
+    public TriggerBlockEntity getTriggerBlock() {
+        return this.triggerBlock;
+    }
 
     @Override
-    public boolean needsBackground() { return false; }
+    public boolean needsBackground() {
+        return false;
+    }
 
     @Override
-    public boolean canPause() { return false; }
+    public boolean canPause() {
+        return false;
+    }
 
     @Override
-    public void open()
-    {
+    public void open() {
         super.open();
+
         this.updateList();
 
-        if (this.triggerBlock != null && this.triggerBlock.isRemoved())
-        {
+        if (this.triggerBlock != null && this.triggerBlock.isRemoved()) {
             this.fill(null, true);
         }
     }
 
     @Override
-    public void close()
-    {
+    public void close() {
         super.close();
 
-        for (TriggerBlockEntity entity : this.toSave)
-        {
+        for (TriggerBlockEntity entity : this.toSave) {
             this.save(entity);
         }
 
         this.toSave.clear();
     }
 
-    private void updateList()
-    {
+    private void updateList() {
         this.triggerBlocks.clear();
 
-        for(TriggerBlockEntity triggerBlock : ClientTriggerBlocksManager.capturedTriggerBlocks) {
+        for (TriggerBlockEntity triggerBlock : ClientTriggerBlocksManager.capturedTriggerBlocks) {
             this.triggerBlocks.add(triggerBlock);
         }
 
         this.fill(this.triggerBlock, true);
     }
 
-    public void fill(TriggerBlockEntity triggerBlock, boolean select)
-    {
-        if (triggerBlock != null) this.toSave.add(triggerBlock);
+    public void fill(TriggerBlockEntity triggerBlock, boolean select) {
+        if (triggerBlock != null) {
+            this.toSave.add(triggerBlock);
+        }
 
         this.triggerBlock = triggerBlock;
 
-        if (triggerBlock != null) this.fillData();
+        if (triggerBlock != null) {
+            this.fillData();
+        }
 
         this.editor.setVisible(triggerBlock != null);
 
-        if (select) this.triggerBlocks.setCurrentScroll(triggerBlock);
+        if (select) {
+            this.triggerBlocks.setCurrentScroll(triggerBlock);
+        }
     }
 
-    private void fillData()
-    {
+    private void fillData() {
         this.transform.fillS(
-                this.triggerBlock.getPos1().x,
-                this.triggerBlock.getPos1().y,
-                this.triggerBlock.getPos1().z
+            this.triggerBlock.getPos1().x,
+            this.triggerBlock.getPos1().y,
+            this.triggerBlock.getPos1().z
         );
+
         this.transform.fillS2(
-                this.triggerBlock.getPos2().x,
-                this.triggerBlock.getPos2().y,
-                this.triggerBlock.getPos2().z
+            this.triggerBlock.getPos2().x,
+            this.triggerBlock.getPos2().y,
+            this.triggerBlock.getPos2().z
         );
     }
 
-    private void save(TriggerBlockEntity triggerBlock)
-    {
+    private void save(TriggerBlockEntity triggerBlock) {
         ScriptVector pos1 = new ScriptVector((int) this.transform.sx.getValue(), (int) this.transform.sy.getValue(), (int) this.transform.sz.getValue());
         ScriptVector pos2 = new ScriptVector((int) this.transform.s2x.getValue(), (int) this.transform.s2y.getValue(), (int) this.transform.s2z.getValue());
 
-        if (triggerBlock != null && (triggerBlock.getPos1().equals(pos1) || triggerBlock.getPos2().equals(pos2)))
-        {
+        if (triggerBlock != null && (triggerBlock.getPos1().equals(pos1) || triggerBlock.getPos2().equals(pos2))) {
             Dispatcher.sendToServer(new TriggerBlockUpdatePacket(
-                    triggerBlock.getPos(),
-                    pos1,
-                    pos2
+                triggerBlock.getPos(),
+                pos1,
+                pos2
             ));
         }
     }
 
     @Override
-    protected boolean subMouseClicked(UIContext context)
-    {
-        if (super.subMouseClicked(context)) return true;
+    protected boolean subMouseClicked(UIContext context) {
+        if (super.subMouseClicked(context)) {
+            return true;
+        }
 
-        if (this.hovered != null && context.mouseButton == 0)
-        {
+        if (this.hovered != null && context.mouseButton == 0) {
             this.fill(this.hovered, true);
         }
 
@@ -233,21 +232,20 @@ public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupp
     }
 
     @Override
-    public void render(UIContext context)
-    {
-        String label = UIKeys.FILM_CONTROLLER_SPEED.format(new Object[]{ this.dashboard.orbit.speed.getValue() }).get();
+    public void render(UIContext context) {
+        String label = UIKeys.FILM_CONTROLLER_SPEED.format(new Object[]{this.dashboard.orbit.speed.getValue()}).get();
         FontRenderer font = context.batcher.getFont();
         int w = font.getWidth(label);
         int x = this.area.w - w - 5;
         int y = this.area.ey() - font.getHeight() - 5;
 
         context.batcher.textCard(label, (float) x, (float) y, -1, -2013265920);
+
         super.render(context);
     }
 
     @Override
-    public void renderInWorld(WorldRenderContext context)
-    {
+    public void renderInWorld(WorldRenderContext context) {
         super.renderInWorld(context);
 
         Camera camera = context.camera();
@@ -258,37 +256,33 @@ public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupp
         double my = mc.mouse.getY();
 
         this.mouseDirection.set(CameraUtils.getMouseDirection(
-                RenderSystem.getProjectionMatrix(),
-                context.matrixStack().peek().getPositionMatrix(),
-                (int) mx, (int) my, 0, 0, mc.getWindow().getWidth(), mc.getWindow().getHeight()
+            RenderSystem.getProjectionMatrix(),
+            context.matrixStack().peek().getPositionMatrix(),
+            (int) mx, (int) my, 0, 0, mc.getWindow().getWidth(), mc.getWindow().getHeight()
         ));
         this.hovered = this.getClosestObject(new Vector3d(pos.x, pos.y, pos.z), this.mouseDirection);
 
         RenderSystem.enableDepthTest();
 
-        for (TriggerBlockEntity entity : this.triggerBlocks.getList())
-        {
+        for (TriggerBlockEntity entity : this.triggerBlocks.getList()) {
             BlockPos blockPos = entity.getPos();
 
             context.matrixStack().push();
             context.matrixStack().translate(
-                    (double) blockPos.getX() - pos.x,
-                    (double) blockPos.getY() - pos.y,
-                    (double) blockPos.getZ() - pos.z
+                (double) blockPos.getX() - pos.x,
+                (double) blockPos.getY() - pos.y,
+                (double) blockPos.getZ() - pos.z
             );
 
-            if (this.hovered != entity && entity != this.triggerBlock)
-            {
+            if (this.hovered != entity && entity != this.triggerBlock) {
                 Draw.renderBox(context.matrixStack(),
-                        entity.getPos1().x, entity.getPos1().y, entity.getPos1().z,
-                        entity.getPos2().x / 16, entity.getPos2().y / 16, entity.getPos2().z / 16);
-            }
-            else
-            {
+                    entity.getPos1().x, entity.getPos1().y, entity.getPos1().z,
+                    entity.getPos2().x / 16, entity.getPos2().y / 16, entity.getPos2().z / 16);
+            } else {
                 Draw.renderBox(context.matrixStack(),
-                        entity.getPos1().x, entity.getPos1().y, entity.getPos1().z,
-                        entity.getPos2().x / 16, entity.getPos2().y / 16, entity.getPos2().z / 16,
-                        0.0F, 0.5F, 1.0F);
+                    entity.getPos1().x, entity.getPos1().y, entity.getPos1().z,
+                    entity.getPos2().x / 16, entity.getPos2().y / 16, entity.getPos2().z / 16,
+                    0.0F, 0.5F, 1.0F);
             }
 
             context.matrixStack().pop();
@@ -297,26 +291,19 @@ public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupp
         RenderSystem.disableDepthTest();
     }
 
-    private TriggerBlockEntity getClosestObject(Vector3d finalPosition, Vector3f mouseDirection)
-    {
+    private TriggerBlockEntity getClosestObject(Vector3d finalPosition, Vector3f mouseDirection) {
         TriggerBlockEntity closest = null;
 
-        for (TriggerBlockEntity object : this.triggerBlocks.getList())
-        {
+        for (TriggerBlockEntity object : this.triggerBlocks.getList()) {
             AABB aabb = this.getHitbox(object);
 
-            if (aabb.intersectsRay(finalPosition, mouseDirection))
-            {
-                if (closest == null)
-                {
+            if (aabb.intersectsRay(finalPosition, mouseDirection)) {
+                if (closest == null) {
                     closest = object;
-                }
-                else
-                {
+                } else {
                     AABB aabb2 = this.getHitbox(closest);
 
-                    if (finalPosition.distanceSquared(aabb.x, aabb.y, aabb.z) < finalPosition.distanceSquared(aabb2.x, aabb2.y, aabb2.z))
-                    {
+                    if (finalPosition.distanceSquared(aabb.x, aabb.y, aabb.z) < finalPosition.distanceSquared(aabb2.x, aabb2.y, aabb2.z)) {
                         closest = object;
                     }
                 }
@@ -326,17 +313,16 @@ public class UITriggerBlockPanel extends UIDashboardPanel implements IFlightSupp
         return closest;
     }
 
-    private AABB getHitbox(TriggerBlockEntity entity)
-    {
+    private AABB getHitbox(TriggerBlockEntity entity) {
         BlockPos pos = entity.getPos();
 
         return new AABB(
-                (double) pos.getX() + entity.getPos1().x - 10,
-                (double) pos.getY() + entity.getPos1().y - 10,
-                (double) pos.getZ() + entity.getPos1().z - 10,
-                (double) pos.getX() + entity.getPos2().x - 10,
-                (double) pos.getY() + entity.getPos2().y - 10,
-                (double) pos.getZ() + entity.getPos2().z - 10
+            (double) pos.getX() + entity.getPos1().x - 10,
+            (double) pos.getY() + entity.getPos1().y - 10,
+            (double) pos.getZ() + entity.getPos1().z - 10,
+            (double) pos.getX() + entity.getPos2().x - 10,
+            (double) pos.getY() + entity.getPos2().y - 10,
+            (double) pos.getZ() + entity.getPos2().z - 10
         );
     }
 }
